@@ -2,7 +2,6 @@ package no.nav.melosys.tjenester.gui.dto;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import no.nav.melosys.domain.dokument.person.Familiemedlem;
 import no.nav.melosys.domain.dokument.person.Familierelasjon;
@@ -35,6 +34,6 @@ public class FamiliemedlemDto {
     static List<FamiliemedlemDto> avFamiliemedlemmer(List<Familiemedlem> familiemedlemmer) {
         return familiemedlemmer.stream()
             .map(FamiliemedlemDto::new)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
